# vulkan_window

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  format_codebase.ps1  lint_codebase.bat  lint_codebase.ps1  msvc_setup.bat  msvc_setup.ps1  run.bat  setup.bat  setup.ps1  setup_clangcl.ps1  setup_makefile.ps1  vulkan_window.sln
.github/workflows/: clang-format-check.yml
src/: triangle_application.cpp  triangle_application.hpp
vulkan_window/: run.bat  triangle_application.cpp  triangle_application.hpp  vulkan_window.cpp  vulkan_window.vcxproj  vulkan_window.vcxproj.filters
